--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,9 @@
+---
+import '@/styles/global.css';
+import Footer from "@/components/Footer.astro";
+import Header from "@/components/Header.astro";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,18 +11,46 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Siri - Apple</title>
 	</head>
 	<body>
-		<slot />
+		<Header />
+		<main id="main" role="main" data-page-overview="overview">
+			<slot />
+		</main>
+		<Footer />
 	</body>
 </html>
 
 <style>
+	:root {
+		--tile-y: 150;
+		--tile-opacity: 0;
+		--tile-duration: 400;
+		--tile-stagger-amount: 1;
+		--tile-stagger-index: 0;
+		--section-padding: 230px;
+		--section-content: 1074px;
+		--section-content-wide: calc(100% - 100px);
+		--tile-border-radius: 40px;
+		--tile-padding: 45px;
+		--tile-max-width: 300px;
+		--digital-assistant-inset: 50px;
+		--digital-assistant-radius: 100px;
+	}
+	
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background-color: #fbfbfd;
+		position: relative;
 	}
+
+	main {
+		display: block;
+		unicode-bidi: isolate;
+	}
+
 </style>
