feature: apple intelligence section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import AppleIntelligence from '@/components/AppleIntelligence.astro';
 import Hero from '@/components/Hero.astro';
 import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout>
 	<Hero />
+	<AppleIntelligence />
 </Layout>
