change: refactor debounce function

--- a/src/components/HeroCopy.astro
+++ b/src/components/HeroCopy.astro
@@ -1,8 +1,6 @@
----
-
----
-
 <script>
+import { debounce } from "@/utils/debounce";
+
     document.addEventListener("DOMContentLoaded", function () {
         interface ExtendedWindow extends Window {
             scrollHandlerActive?: boolean;
@@ -59,19 +57,6 @@
                 
                 element.style.transform = `matrix(1, 0, 0, 1, 0, ${-elevationValue})`; 
             });
-        }
-
-        function debounce<T extends (...args: any[]) => any>(
-            func: T, 
-            wait: number
-        ): (...args: Parameters<T>) => void {
-            let timeout: number | null = null;
-            
-            return function(this: any, ...args: Parameters<T>): void {
-                const context = this;
-                if (timeout !== null) clearTimeout(timeout);
-                timeout = window.setTimeout(() => func.apply(context, args), wait);
-            };
         }
 
         // Función para configurar o limpiar los efectos de parallax
