feature: on the go section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
-import AppleIntelligence from '@/components/AppleIntelligence.astro';
 import Hero from '@/components/Hero.astro';
+import AppleIntelligence from '@/components/AppleIntelligence.astro';
+import OnTheGo from '@/components/OnTheGo.astro';
 import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout>
 	<Hero />
 	<AppleIntelligence />
+	<OnTheGo />
 </Layout>
