--- a/src/components/OnTheGo.astro
+++ b/src/components/OnTheGo.astro
@@ -1,5 +1,5 @@
 <section class="section section-on-the-go section-scenario will-change">
-    <span class="gradient-bg gradient-bg-on-the-go"></span>
+    <span class="gradient-bg gradient-bg-on-the-go" style="--bg-height: 40.42778793418647%; opacity: 0;"></span>
     <div class="content relative w-[var(--section-content)] mr-auto ml-auto">
         <div class="scenario-intro relative pl-[var(--tile-padding)] pr-[var(--tile-padding)]">
             <h2 class="typography-section-headline headline">
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="grid-main grid grid-cols-12 gap-6 px-6 mx-auto pl-0 pr-0 relative">
-            <div class="copy-container mb-20 w-[525px] opacity-[1] pl-[var(--tile-padding)] pr-[var(--tile-padding)] text-[#86868b] row-span-[1] mt-[190px] will-change parallax-this grid-start-7">
+            <div class="copy-container mb-20 w-[525px] opacity-[1] pl-[var(--tile-padding)] pr-[var(--tile-padding)] text-[#4e4e52] row-span-[1] mt-[190px] will-change parallax-this grid-start-7">
                 <p class="copy typography-scenario-intro-copy max-w-[388px] mb-0">
                     Do it all even when your hands are full. Stay in touch, set reminders, 
                     or find where you parked. And with back-to-back requests, you can give 
@@ -33,7 +33,7 @@
                     <img src="/images/accessories/go_iphone_large.png" alt="iPhone">
                 </picture>
             </div>
-            <div class="go-iphone-copy w-full col-start-1 col-end-13 row-start-2 row-end-3 rounded-[var(--tile-border-radius)] box-border bg-red-400 py-[var(--tile-padding)] grid relative min-h-[var(--main-tile-height)] ml-auto mr-auto gap-x-6 gap-y-6 grid-cols-12">
+            <div class="go-iphone-copy w-full col-start-1 col-end-13 row-start-2 row-end-3 rounded-[var(--tile-border-radius)] box-border bg-white py-[var(--tile-padding)] grid relative min-h-[var(--main-tile-height)] ml-auto mr-auto gap-x-6 gap-y-6 grid-cols-12">
                 <div class="hey-siri-copy parallax-this fade-it">
                     <picture class="overview-quote-hey-siri-light mt-5">
                         <source srcset="/images/logos/go_quote_light_bg_small.png" media="(max-width:734px)"> 
@@ -43,7 +43,8 @@
                     </picture>
                     <h3 class="typography-headline-elevated !text-[59px]">
                         <span class="gradient">Siri,</span>
-                        text Rigo, ‘I’m on my way’
+                        text Rigo,
+                        <span id="bg-reference">‘I’m on my way’</span>
                     </h3>
                 </div>
             </div>
@@ -53,6 +54,7 @@
 
 <script>
     import { setupParallaxEffect } from "@/utils/parallaxEffect";
+    import { createBackgroundOpacityObserver } from "@/utils/backgroundOpacityObserve";
 
     setupParallaxEffect({
         selector: '#airpods-on-the-go',
@@ -61,6 +63,28 @@
         easingFactor: 0.1,
         progressScale: 3.5
     });
+
+    setupParallaxEffect({
+        selector: '.copy-container',
+        startElevation: 0,
+        endElevation: 0,
+        easingFactor: 0.1,
+        progressScale: 0.999,
+        type: 'opacity'
+    });
+
+    setupParallaxEffect({
+        selector: '.hey-siri-copy',
+        startElevation: 38,
+        endElevation: 0,
+        easingFactor: 0.1,
+        progressScale: 4
+    });
+
+    createBackgroundOpacityObserver(
+        '.gradient-bg-on-the-go',  
+        '#bg-reference'            
+    );
 </script>
 
 <style>
@@ -94,10 +118,6 @@
         will-change: opacity;
     }
 
-    .section-on-the-go .gradient-bg {
-        background-image: linear-gradient(180deg, #fbfbfd, #E795B7 20%, #935893 45%, #224D88);
-    }
-
     .section-scenario .gradient-bg {
         position: absolute;
         left: 0;
@@ -112,6 +132,10 @@
         transition: opacity .75s ease-in-out;
         overflow: hidden;
         border-radius: 60px;
+    }
+
+    .section-on-the-go .gradient-bg {
+        background-image: linear-gradient(180deg, #fbfbfd, #E795B7 20%, #935893 45%, #224D88);
     }
 
     .section-on-the-go .headline {
