feature: in the car component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Hero from '@/components/Hero.astro';
 import AppleIntelligence from '@/components/AppleIntelligence.astro';
 import OnTheGo from '@/components/OnTheGo.astro';
 import Layout from '@/layouts/Layout.astro';
+import InTheCar from '@/components/InTheCar.astro';
 ---
 
 <Layout>
 	<Hero />
 	<AppleIntelligence />
 	<OnTheGo />
+	<InTheCar />
 </Layout>
