--- a/src/components/OnTheGo.astro
+++ b/src/components/OnTheGo.astro
@@ -1,58 +1,60 @@
 ---
 import BgGradientSection from "./BgGradientSection.astro";
-import GridCards from "./GridCards.astro";
+import OnTheGoCards from "./OnTheGoCards.astro";
 ---
 
 <BgGradientSection bg="gradient-bg-purple">
-    <div class="scenario-intro relative pl-[var(--tile-padding)] pr-[var(--tile-padding)]">
-        <h2 class="typography-section-headline headline">
-            On the
-            <br>
-            go.
-        </h2>
-        <div id="airpods-on-the-go" class="absolute mt-0 z-10 right-[26%] top-[41%] parallax-this">
-            <picture class="overview-airpods-on-the-go">
-                <source srcset="/images/accessories/go_airpods_small.png" media="(max-width:734px)"> 
-                <source srcset="/images/accessories/go_airpods_medium.png" media="(max-width:1068px)">
-                <source srcset="/images/accessories/go_airpods_large.png" media="(min-width:0px)">
-                <img src="/images/accessories/go_airpods_large.png" alt="AirPods">
-            </picture>
-        </div>
-    </div>
-    <div class="grid-main grid grid-cols-12 gap-6 px-6 mx-auto pl-0 pr-0 relative">
-        <div class="copy-container mb-20 w-[525px] opacity-[1] pl-[var(--tile-padding)] pr-[var(--tile-padding)] text-[#4e4e52] row-span-[1] mt-[190px] will-change parallax-this grid-start-7">
-            <p class="copy typography-scenario-intro-copy max-w-[388px] mb-0">
-                Do it all even when your hands are full. Stay in touch, set reminders, 
-                or find where you parked. And with back-to-back requests, you can give 
-                a command, then follow up with another once it’s complete — without having 
-                to say “Siri” again.
-            </p>
-        </div>
-        <div class="image-wrapper-sticky pl-[var(--tile-padding)] col-start-1 col-end-7 row-start-1 row-end-3">
-            <picture class="overview-go-iphone sticky top-[40vh] max-w-[100%] mt-[-20px] block">
-                <source srcset="/images/accessories/go_iphone_small.png" media="(max-width:734px)"> 
-                <source srcset="/images/accessories/go_iphone_medium.png" media="(max-width:1068px)">
-                <source srcset="/images/accessories/go_iphone_large.png" media="(min-width:0px)">
-                <img src="/images/accessories/go_iphone_large.png" alt="iPhone">
-            </picture>
-        </div>
-        <div class="go-iphone-copy w-full col-start-1 col-end-13 row-start-2 row-end-3 rounded-[var(--tile-border-radius)] box-border bg-white py-[var(--tile-padding)] grid relative min-h-[var(--main-tile-height)] ml-auto mr-auto gap-x-6 gap-y-6 grid-cols-12">
-            <div class="hey-siri-copy parallax-this fade-it">
-                <picture class="overview-quote-hey-siri-light mt-5">
-                    <source srcset="/images/logos/go_quote_purple_light_bg_small.png" media="(max-width:734px)"> 
-                    <source srcset="/images/logos/go_quote_purple_light_bg_medium.png" media="(max-width:1068px)">
-                    <source srcset="/images/logos/go_quote_purple_light_bg_large.png" media="(min-width:0px)">
-                    <img src="/images/logos/go_quote_purple_light_bg_large.png" alt="Hey Siri">
+    <div class="content relative w-[var(--section-content)] mr-auto ml-auto">
+        <div class="scenario-intro relative pl-[var(--tile-padding)] pr-[var(--tile-padding)]">
+            <h2 class="typography-section-headline headline">
+                On the
+                <br>
+                go.
+            </h2>
+            <div id="airpods-on-the-go" class="absolute mt-0 z-10 right-[26%] top-[41%] parallax-this">
+                <picture class="overview-airpods-on-the-go">
+                    <source srcset="/images/accessories/go_airpods_small.png" media="(max-width:734px)"> 
+                    <source srcset="/images/accessories/go_airpods_medium.png" media="(max-width:1068px)">
+                    <source srcset="/images/accessories/go_airpods_large.png" media="(min-width:0px)">
+                    <img src="/images/accessories/go_airpods_large.png" alt="AirPods">
                 </picture>
-                <h3 class="typography-headline-elevated !text-[59px]">
-                    <span class="bg-gradient-to-tr from-[rgb(34,77,136)] from-32% via-[rgb(147,88,147)] via-60% to-[rgb(232,150,184)] to-80% bg-clip-text text-transparent">Siri,</span>
-                    text Rigo,
-                    <span id="bg-reference">‘I’m on my way’</span>
-                </h3>
             </div>
         </div>
+        <div class="grid-main grid grid-cols-12 gap-6 px-6 mx-auto pl-0 pr-0 relative">
+            <div class="copy-container mb-20 w-[525px] opacity-[1] pl-[var(--tile-padding)] pr-[var(--tile-padding)] text-[#4e4e52] row-span-[1] mt-[190px] will-change parallax-this grid-start-7">
+                <p class="copy typography-scenario-intro-copy max-w-[388px] mb-0">
+                    Do it all even when your hands are full. Stay in touch, set reminders, 
+                    or find where you parked. And with back-to-back requests, you can give 
+                    a command, then follow up with another once it’s complete — without having 
+                    to say “Siri” again.
+                </p>
+            </div>
+            <div class="image-wrapper-sticky pl-[var(--tile-padding)] col-start-1 col-end-7 row-start-1 row-end-3">
+                <picture class="overview-go-iphone sticky top-[40vh] max-w-[100%] mt-[-20px] block">
+                    <source srcset="/images/accessories/go_iphone_small.png" media="(max-width:734px)"> 
+                    <source srcset="/images/accessories/go_iphone_medium.png" media="(max-width:1068px)">
+                    <source srcset="/images/accessories/go_iphone_large.png" media="(min-width:0px)">
+                    <img src="/images/accessories/go_iphone_large.png" alt="iPhone">
+                </picture>
+            </div>
+            <div class="go-iphone-copy w-full col-start-1 col-end-13 row-start-2 row-end-3 rounded-[var(--tile-border-radius)] box-border bg-white py-[var(--tile-padding)] grid relative min-h-[var(--main-tile-height)] ml-auto mr-auto gap-x-6 gap-y-6 grid-cols-12">
+                <div class="hey-siri-copy parallax-this fade-it">
+                    <picture class="overview-quote-hey-siri-light mt-5">
+                        <source srcset="/images/logos/go_quote_purple_light_bg_small.png" media="(max-width:734px)"> 
+                        <source srcset="/images/logos/go_quote_purple_light_bg_medium.png" media="(max-width:1068px)">
+                        <source srcset="/images/logos/go_quote_purple_light_bg_large.png" media="(min-width:0px)">
+                        <img src="/images/logos/go_quote_purple_light_bg_large.png" alt="Hey Siri">
+                    </picture>
+                    <h3 class="typography-headline-elevated !text-[59px]">
+                        <span class="bg-gradient-to-tr from-[rgb(34,77,136)] from-32% via-[rgb(147,88,147)] via-60% to-[rgb(232,150,184)] to-80% bg-clip-text text-transparent">Siri,</span>
+                        text Rigo,
+                        <span id="bg-reference">‘I’m on my way’</span>
+                    </h3>
+                </div>
+            </div>
+        </div>
+        <OnTheGoCards />
     </div>
-    <GridCards />
 </BgGradientSection>
 
 <script>
