fix reference class bg gradient section

--- a/src/components/OnTheGo.astro
+++ b/src/components/OnTheGo.astro
@@ -3,7 +3,7 @@ import BgGradientSection from "./BgGradientSection.astro";
 import OnTheGoCards from "./OnTheGoCards.astro";
 ---
 
-<BgGradientSection bg="gradient-bg-purple">
+<BgGradientSection bg="gradient-bg-purple" spanBgClass="gradient-bg-on-the-go">
     <div class="content relative w-[var(--section-content)] mr-auto ml-auto">
         <div class="scenario-intro relative pl-[var(--tile-padding)] pr-[var(--tile-padding)]">
             <h2 class="typography-section-headline headline">
